# flashcards

./: Cargo.toml  build_and_deploy.sh
src/: assessment.rs  config.rs  logger.rs  main.rs  run_flashcards.rs  yaml_parse.rs
src/flashcards/: test.yaml
src/types/: config_file.rs  flashcard.rs  flashcard_file.rs
