[package]
name = "flashcards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
ansi_term = "0.12.1"